# enum-group

./: Cargo.toml  LICENSE  README.md
examples/: typing.rs
src/: context.rs  lib.rs
tests/: generic_enum.rs  named_enum.rs  unit_enum.rs  unname_enum.rs
