[package]
name = "enum-group"
version = "0.1.0"
edition = "2021"
authors = ["olinex <928803521@qq.com>"]
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
description = "A simple derive macro crate that helps enum types to group their variants"
readme = "README.md"
homepage = "https://github.com/olinex/enum-group"
repository = "https://github.com/olinex/enum-group"
keywords = ["derive", "macro", "enum", "group"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[expand]
theme = "TwoDark"
color = "always"
pager = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["extra-traits", "parsing"]}
quote = "1.0"
darling = "0.14"
